projects listing styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,11 +72,11 @@
 
         <!-- original content goes in this container -->
         <div class="off-canvas-content" data-off-canvas-content>
-          <main class="row column">
+          <main class="row">
             {{ content }}
           </main>
 
-          <a class="large button cta" href="#">LATEST DEVELOPMENT SELLING NOW</a>
+          <a class="large button cta main-cta" href="#">LATEST DEVELOPMENT SELLING NOW</a>
 
           <footer class="site-footer row" role="contentinfo">
             <i class="logo-spacer large"></i>
