--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -58,6 +58,10 @@ h1 {
 	}
 }
 
+a:hover {
+	color: $primary-color;
+}
+
 .lead {
     font-weight: 200;
 		margin-bottom: 32px;
@@ -191,6 +195,10 @@ h1 {
 	.menu > li > a {
 	    padding: 0.7rem 1.8rem;
 			color: $dark-gray;
+
+			&:hover {
+				color: $primary-color;
+			}
 	}
 
 	.logo {
@@ -204,6 +212,13 @@ h1 {
 @media #{$small-only} {
 	main {
 		padding-top: 92px;
+	}
+}
+
+@media #{$medium-up} {
+	main {
+		padding-top: 38px;
+    padding-bottom: 46px;
 	}
 }
 
@@ -240,6 +255,12 @@ h1 {
 // PROJECTS LISTING
 
 .project-listing {
+	padding-bottom: 32px;
+
+	.project-thumb-wrapper {
+		@include project-thumb();
+		background-color: transparent;
+	}
 	.project-thumb {
 		@include project-thumb();
 	}
@@ -279,7 +300,7 @@ h1 {
 
 	&:hover {
 		.project-thumb {
-			opacity: .75;
+			opacity: .95;
 			filter: blur(1px);
 		}
 		.project-name,
@@ -296,6 +317,10 @@ h1 {
 	display: block;
 	width: 276px;
 	border-radius: 6px;
+}
+
+.cta.main-cta {
+	margin: 42px auto;
 }
 
 .site-footer {
