--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
             <ul class="menu">
               {% include nav.html %}
             </ul>
-            <p><a class="logo" href="{{ site.url }}"><img src="/img/logo.png" alt="Damgar Group Logo"></a></p>
+            <p><a class="logo" href="{{ site.url }}"><img src="{{site.url}}/img/logo.png" alt="Damgar Group Logo"></a></p>
           </div>
         </div>
 
