--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -235,6 +235,12 @@ a:hover {
 			height: 512px;
 		}
 	}
+
+	a:hover .project-thumb {
+		filter: none;
+		opacity: 1;
+	}
+
 	.project-label {
 		display: block;
 	}
