cta button building

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
             <div class="title-bar-center">
               <img id="sticky-logo-swap" class="hide" src="{{site.url}}/img/logo_d.png" alt="Damgar Group Symbol">
               <img id="expanded-logo-swap" class="hide" src="{{site.url}}/img/logo.png" alt="Damgar Group Symbol">
-              <img class="mobile-logo mobile-logo-expanded" src="{{site.url}}/img/logo.png" alt="Damgar Group Logo">
+              <a class="logo" href="{{ site.url }}"><img class="mobile-logo mobile-logo-expanded" src="{{site.url}}/img/logo.png" alt="Damgar Group Logo"></a>
               <button class="menu-icon float-right" type="button" data-open="offCanvasRight"><i class="fa fa-bars"></i></button>
             </div>
           </div>
