--- a/css/app.css
+++ b/css/app.css
@@ -4269,7 +4269,11 @@ a:hover {
   margin: 32px auto;
   display: block;
   width: 276px;
-  border-radius: 6px; }
+  border-radius: 0 6px 6px 6px;
+  box-shadow: 1px 1px 1px #9B9B9B;
+  text-shadow: 0.5px 0.5px 1px #9B9B9B; }
+  .cta:hover {
+    box-shadow: none; }
 
 .cta.main-cta {
   margin: 42px auto; }
