final button touches

--- a/css/app.css
+++ b/css/app.css
@@ -4270,10 +4270,12 @@ a:hover {
   display: block;
   width: 276px;
   border-radius: 0 6px 6px 6px;
-  box-shadow: 1px 1px 1px #9B9B9B;
-  text-shadow: 0.5px 0.5px 1px #9B9B9B; }
+  box-shadow: 1px 1px 1px #4A4A4A;
+  text-shadow: 0.5px 0.5px 1px #9B9B9B;
+  transition: all 300ms ease-out; }
   .cta:hover {
-    box-shadow: none; }
+    box-shadow: none;
+    text-shadow: none; }
 
 .cta.main-cta {
   margin: 42px auto; }
