--- a/css/app.css
+++ b/css/app.css
@@ -4249,7 +4249,8 @@ a:hover {
     font-size: 2rem; }
     @media screen and (min-width: 40em) {
       .project-listing .project-name {
-        display: inline-block; } }
+        display: inline-block;
+        max-width: 70%; } }
   .project-listing .project-location {
     display: inline-block;
     margin-top: -12px;
