--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -58,6 +58,9 @@ h1 {
 	}
 }
 
+a {
+	color: $dark-gray;
+}
 a:hover {
 	color: $primary-color;
 }
@@ -198,11 +201,6 @@ a:hover {
 
 	.menu > li > a {
 	    padding: 0.7rem 1.8rem;
-			color: $dark-gray;
-
-			&:hover {
-				color: $primary-color;
-			}
 	}
 
 	.logo {
@@ -230,29 +228,11 @@ a:hover {
     box-shadow: none;
 }
 
-// HOME
-
-.latest-project.project-listing {
-	.project-thumb,
-	.project-thumb-wrapper {
-		@media #{$large-up} {
-			height: 512px;
-		}
-	}
-
-	a:hover .project-thumb {
-		filter: none;
-		opacity: 1;
-	}
-
-	.project-label {
-		display: block;
-	}
-}
-
 // PROJECTS LISTING
 
-.project-listing {
+.project-listing,
+.project-latest,
+.project-detail {
 	padding-bottom: 32px;
 
 	a {
@@ -270,43 +250,101 @@ a:hover {
 			color: $primary-color;
 		}
 	}
+}
+.project-thumb-wrapper {
+	@include project-thumb();
+	background-color: transparent;
+}
+.project-thumb {
+	@include project-thumb();
+}
+.project-name {
+	font-weight: $global-weight-bold;
+	margin-bottom: 0;
+	font-size: rem-calc(32);
+
+	@media #{$medium-up} {
+		display: inline-block;
+		max-width: 70%;
+	}
+}
+.project-location {
+	display: inline-block;
+	margin-top: -12px;
+	font-size: rem-calc(28);
+	font-weight: $global-weight-light;
+
+	@media #{$medium-up} {
+		text-align: right;
+		float: right;
+		margin-top: 0;
+	}
+}
+.project-label {
+	display: inline-block;
+	text-transform: uppercase;
+	color: $medium-gray;
+	margin: 7px 0 2px 0;
+	font-size: rem-calc(16);
+	letter-spacing: 3px;
+}
+
+// HOME
+
+.project-latest {
+	.project-thumb,
+	.project-thumb-wrapper {
+		@media #{$large-up} {
+			height: 512px;
+		}
+	}
+
+	a:hover .project-thumb {
+		filter: none;
+		opacity: 1;
+	}
+
+	.project-label {
+		display: block;
+	}
+}
+
+// PROJECT DETAIL PAGE
+
+.project-detail {
+	.project-thumb,
+	.project-thumb-wrapper {
+		@media #{$large-up} {
+			height: 512px;
+		}
+	}
 
 	.project-thumb-wrapper {
-		@include project-thumb();
-		background-color: transparent;
+		margin-bottom: 44px;
 	}
-	.project-thumb {
-		@include project-thumb();
-	}
+
 	.project-name {
-		font-weight: $global-weight-bold;
-		margin-bottom: 0;
-		font-size: rem-calc(32);
-
-		@media #{$medium-up} {
-			display: inline-block;
-			max-width: 70%;
-		}
+		display: block;
+		text-align: left;
 	}
-	.project-location {
-		display: inline-block;
-		margin-top: -12px;
-		font-size: rem-calc(28);
+
+	//
+	// .project-name {
+	// 	display: inline-block;
+	// }
+	//
+	// .project-location {
+	// 	float: right;
+	// 	text-align: right;
+	// 	font-weight: $global-weight-light;
+	// }
+}
+
+.project-detail-content {
+	.project-detail-key-points {
+		font-size: rem-calc(22);
 		font-weight: $global-weight-light;
-
-		@media #{$medium-up} {
-			text-align: right;
-			float: right;
-			margin-top: 0;
-		}
-	}
-	.project-label {
-		display: inline-block;
-		text-transform: uppercase;
-		color: $medium-gray;
-		margin: 7px 0 2px 0;
-		font-size: rem-calc(16);
-		letter-spacing: 3px;
+		padding-left: 12px;
 	}
 }
 
@@ -348,10 +386,6 @@ a:hover {
 	.logo-spacer {
 		width: 45px;
 		height: 45px;
-	}
-
-	a {
-		color: $secondary-color;
 	}
 
 	ul {
