--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -345,6 +345,7 @@ a:hover {
 		font-size: rem-calc(22);
 		font-weight: $global-weight-light;
 		padding-left: 12px;
+		margin-bottom: 32px;
 	}
 }
 
