nicer image styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,11 +89,13 @@
 
         <!-- original content goes in this container -->
         <div class="off-canvas-content" data-off-canvas-content>
-          <main class="row">
+          <main>
             {{ content }}
           </main>
 
-          <a class="large button cta main-cta" href="#">LATEST DEVELOPMENT SELLING NOW</a>
+          <div class="row column">
+            <a class="large button cta main-cta" href="#">LATEST DEVELOPMENT SELLING NOW</a>
+          </div>
 
           <footer class="site-footer row" role="contentinfo">
             <i class="logo-spacer large"></i>
