--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -255,6 +255,10 @@ a:hover {
 			color: $primary-color;
 		}
 	}
+
+	&.columns:last-child:not(:first-child) {
+    float: left;
+	}
 }
 .project-thumb-wrapper {
 	@include project-thumb();
