smaller small elements, fix colour change on small

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,8 +97,9 @@
             <a class="large button cta main-cta" href="#">LATEST DEVELOPMENT SELLING NOW</a>
           </div>
 
-          <footer class="site-footer row" role="contentinfo">
+          <footer id="contact" class="site-footer row" role="contentinfo">
             <i class="logo-spacer large"></i>
+            <h2 class="text-center"><small>Contact</small></h2>
             <ul class="text-center">
               <li><a href="tel:{{ site.phone }}">{{ site.phone }}</a></li>
               <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
