--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -119,6 +119,10 @@ small {
 		display: none;
 	}
 
+	.logo {
+		display: inline-block;
+	}
+
 	.mobile-logo {
 		display: inline-block;
 		width: 58px;
@@ -128,8 +132,8 @@ small {
 		.expanded & {
 			display: block;
 			width: 120px;
-			margin: 28px auto 6px auto;
-			margin-bottom: 40px;
+			margin: 28px auto;
+			margin-bottom: 32px;
 		}
 	}
 
