--- a/css/app.css
+++ b/css/app.css
@@ -4725,9 +4725,8 @@ small {
     display: inline-block;
     width: 58px;
     margin: 0 auto;
-    transition: all 0.4s ease; }
+    transition: width 300ms ease-in; }
     .expanded .title-bar .mobile-logo {
-      display: block;
       width: 120px;
       margin: 28px auto;
       margin-bottom: 32px; }
@@ -4945,7 +4944,7 @@ small {
   border-radius: 0 6px 6px 6px;
   box-shadow: 1px 1px 1px #4A4A4A;
   text-shadow: 0.5px 0.5px 1px #9B9B9B;
-  transition: all 300ms ease-out; }
+  transition: background-color 0.3s ease-out, color 0.3s ease-out, box-shadow 0.3s ease-out; }
   .cta:hover {
     box-shadow: none;
     text-shadow: none; }
