--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -127,10 +127,10 @@ small {
 		display: inline-block;
 		width: 58px;
 		margin: 0 auto;
-		transition: all 0.4s ease;
+		transition: width 300ms ease-in;
 
 		.expanded & {
-			display: block;
+			// display: block;
 			width: 120px;
 			margin: 28px auto;
 			margin-bottom: 32px;
@@ -381,7 +381,7 @@ small {
 	border-radius: 0 6px 6px 6px;
 	box-shadow: 1px 1px 1px $dark-gray;
 	text-shadow: 0.5px 0.5px 1px $medium-gray;
-	transition: all 300ms ease-out;
+	transition: background-color 0.3s ease-out, color 0.3s ease-out, box-shadow 0.3s ease-out;
 
 	&:hover {
 		box-shadow: none;
