--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -290,6 +290,7 @@ small {
 	}
 }
 .project-location {
+	font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
 	display: inline-block;
 	margin-top: -12px;
 	font-size: rem-calc(28);
@@ -355,7 +356,6 @@ small {
 		}
 	}
 
-
 	// .project-location {
 	// 	float: right;
 	// 	text-align: right;
@@ -369,6 +369,64 @@ small {
 		font-weight: $global-weight-light;
 		padding-left: 12px;
 		margin-bottom: 32px;
+	}
+}
+
+// TESTIMONIALS PAGE
+
+.testimonial-wrap {
+	.quote {
+	  background: $light-gray;
+	  padding: 15px 20px 5px 15px;
+	  border-radius: 5px;
+	  margin-bottom: 30px;
+
+		p {
+			margin-bottom: 0;
+		}
+
+	  &:after {
+	    content: '';
+	    width: 0px;
+	    height: 0px;
+	    border-style: solid;
+	    border-width: 20px 18px 0 18px;
+	    border-color: $light-gray transparent transparent transparent;
+	    position: relative;
+	    top: 37px;
+	    left: 20px;
+	  }
+	}
+
+	.testimonial-person {
+	  margin-left: 25px;
+	  margin-bottom: 80px;
+
+	  .photo {
+	    background-color: $primary-color;
+	    border-radius: 100px;
+	    width: 60px;
+	    height: 60px;
+	    float: left;
+	    margin-right: 10px;
+	  }
+
+	  p {
+	    position: relative;
+	    top: 5px;
+	    text-transform: uppercase;
+
+	    &:nth-child(2) {
+	      font-size: 16px;
+	      font-weight: 600;
+	      margin-bottom: 0;
+	    }
+
+	    &:nth-child(3) {
+	      font-size: 14px;
+	      color: $dark-gray;
+	    }
+	  }
 	}
 }
 
