--- a/css/app.css
+++ b/css/app.css
@@ -4696,7 +4696,8 @@ small {
 
 .thumbnail {
   border: none;
-  box-shadow: none; }
+  box-shadow: none;
+  min-width: 100%; }
   .thumbnail:hover {
     box-shadow: none; }
 
