--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -257,7 +257,7 @@ small {
 .project-listing,
 .project-latest,
 .project-detail {
-	padding-bottom: 32px;
+	padding: 0 0px 32px 0px;
 
 	a {
 		color: $body-font-color;
