--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -489,8 +489,11 @@ small {
 	margin: 42px auto;
 }
 
-.site-footer {
+.light-grey-block {
 	background-color: $light-gray;
+}
+
+.site-footer {
 	padding-bottom: 32px;
 	font-size: 110%;
 
