--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -15,3 +15,28 @@ layout: default
 </div>
 
 {{ content }}
+
+<br> <br>
+
+<div class="row expanded">
+  <br>
+
+  <div class="medium-10 small-centered">
+    <h3>Related Projects</h3>
+    <br>
+
+    {% for project in site.related_posts limit:2 %}
+        <div class="large-6 columns project-listing">
+          <a href="{{project.url}}" class="column">
+            <div class="project-thumb-wrapper">
+              <img class="project-hover-logo" src="/img/logo_d_white.png">
+              <div class="thumbnail project-thumb" style="background-image: url('{{project.feature_img}}');"></div>
+            </div>
+            <h2 class="project-name">{{project.title}}</h2>
+            <span class="project-location">{{project.location}}</span>
+          </a>
+        </div>
+    {% endfor %}
+  </div>
+
+</div>
