--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,9 +49,32 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="{{site.url}}/img/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
-
   </head>
   <body>
+    <!--
+      ____  _   _ ___ _   _____   ______   __
+     | __ )| | | |_ _| | |_   _| | __ ) \ / /
+     |  _ \| | | || || |   | |   |  _ \\ V /
+     | |_) | |_| || || |___| |   | |_) || |
+     |____/ \___/|___|_____|_|   |____/ |_|   ____ ___ ____  ____  _____ _     _
+     | \ | |  / \|_   _| | | |  / \  | \ | | | __ )_ _|  _ \|  _ \| ____| |   | |
+     |  \| | / _ \ | | | |_| | / _ \ |  \| | |  _ \| || |_) | |_) |  _| | |   | |
+     | |\  |/ ___ \| | |  _  |/ ___ \| |\  | | |_) | ||  _ <|  _ <| |___| |___| |___
+     |_|_\_/_/   \_\_| |_| |_/_/   \_\_|_\_| |____/___|_| \_\_| \_\_____|_____|_____|
+
+
+
+     / ___|  ___  ___   _ __   __ _| |_| |__   __ _ _ __ | |__ (_)_ __ _ __ ___| | |  _ __ ___   ___
+     \___ \ / _ \/ _ \ | '_ \ / _` | __| '_ \ / _` | '_ \| '_ \| | '__| '__/ _ \ | | | '_ ` _ \ / _ \
+      ___) |  __/  __/ | | | | (_| | |_| | | | (_| | | | | |_) | | |  | | |  __/ | |_| | | | | |  __/
+     |____/ \___|\___| |_| |_|\__,_|\__|_| |_|\__,_|_| |_|_.__/|_|_|  |_|  \___|_|_(_)_| |_| |_|\___|
+       __                                         _        __
+      / _| ___  _ __   _ __ ___   ___  _ __ ___  (_)_ __  / _| ___
+     | |_ / _ \| '__| | '_ ` _ \ / _ \| '__/ _ \ | | '_ \| |_ / _ \
+     |  _| (_) | |    | | | | | | (_) | | |  __/ | | | | |  _| (_) |
+     |_|  \___/|_|    |_| |_| |_|\___/|_|  \___| |_|_| |_|_|  \___/
+
+     -->
 
     <div id="off-canvas-menu" class="off-canvas-wrapper" data-force-top="false">
       <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
@@ -103,7 +126,7 @@
               <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             </ul>
             <p class="text-center"><small><i class="fa fa-copyright"></i> {{ site.year }} {{ site.brand }} <br>
-              <i class="fa fa-code"></i> Built by <a href="http://nathanbirrell.me" target="_blank">Nathan Birrell</a></small></p>
+              <!-- <i class="fa fa-code"></i> Built by <a href="http://nathanbirrell.me" target="_blank">Nathan Birrell</a></small></p> -->
           </footer>
         </div><!-- end .off-canvas-content -->
 
