--- a/_includes/recent-projects.html
+++ b/_includes/recent-projects.html
@@ -3,14 +3,14 @@
 {% else %}
   {% assign posts = site.posts %}
 {% endif %}
-<div class="row expanded">
+<div class="row">
   <br>
-  <div class="medium-10 small-centered">
+  <div class="medium-12 small-centered column">
     <h3>Recent Projects</h3>
     <br>
 
     {% for project in posts limit:2 %}
-        <div class="large-6 columns project-listing">
+        <div class="large-6 columns project-listing recent-projects">
           <a href="{{project.url}}" class="column">
             <div class="project-thumb-wrapper">
               <img class="project-hover-logo" src="/img/logo_d_white.png">
