--- a/_includes/cta.html
+++ b/_includes/cta.html
@@ -1,5 +1,7 @@
 <div class="row column">
   {% if page.url != "/" and site.latest_development_url != "" %}
-    <a class="large button cta main-cta" href="{{site.latest_development_url}}">LATEST DEVELOPMENT SELLING NOW</a>
+    <div class="cta-wrap">
+      <a class="large button cta main-cta" href="{{site.latest_development_url}}">LATEST DEVELOPMENT SELLING NOW</a>
+    </div>
   {% endif %}
 </div>
