--- a/css/app.css
+++ b/css/app.css
@@ -5040,21 +5040,49 @@ small {
       font-size: 14px;
       color: #4A4A4A; }
 
-.cta {
-  margin: 32px auto;
+/**
+ * Call to actions (CTAs)
+ */
+.cta-wrap {
+  position: relative;
   display: block;
+  margin: 32px auto;
+  text-align: center; }
+
+.cta {
+  position: relative;
+  display: inline-block;
   width: 276px;
   border-radius: 0 6px 6px 6px;
   box-shadow: 1px 1px 1px #4A4A4A;
   text-shadow: 0.5px 0.5px 1px #9B9B9B;
-  transition: background-color 0.3s ease-out, color 0.3s ease-out, box-shadow 0.3s ease-out; }
+  transition: background-color 0.3s ease-out, color 0.3s ease-out, box-shadow 0.3s ease-out;
+  overflow: hidden; }
   .cta:hover {
     box-shadow: none;
     text-shadow: none; }
 
-.cta.main-cta {
-  margin: 42px auto; }
+/**
+ * Material design click
+ */
+.circle {
+  display: block;
+  position: absolute;
+  background: rgba(0, 0, 0, 0.075);
+  border-radius: 50%;
+  -ms-transform: scale(0);
+      transform: scale(0); }
+  .circle.animate {
+    animation: effect 0.65s linear; }
 
+@keyframes effect {
+  100% {
+    opacity: 0;
+    transform: scale(2.5); } }
+
+/**
+ * FOOTER
+ */
 .light-grey-block {
   background-color: #F7F3F3; }
 
