--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -482,16 +482,26 @@ small {
 	}
 }
 
-// FOOTER
+/**
+ * Call to actions (CTAs)
+ */
+
+.cta-wrap {
+	position: relative;
+	display: block;
+	margin: 32px auto;
+	text-align: center;
+}
 
 .cta {
-	margin: 32px auto;
-	display: block;
+	position: relative;
+	display: inline-block;
 	width: 276px;
 	border-radius: 0 6px 6px 6px;
 	box-shadow: 1px 1px 1px $dark-gray;
 	text-shadow: 0.5px 0.5px 1px $medium-gray;
 	transition: background-color 0.3s ease-out, color 0.3s ease-out, box-shadow 0.3s ease-out;
+	overflow: hidden;
 
 	&:hover {
 		box-shadow: none;
@@ -499,9 +509,30 @@ small {
 	}
 }
 
-.cta.main-cta {
-	margin: 42px auto;
-}
+/**
+ * Material design click
+ */
+
+ .circle{
+   display: block;
+   position: absolute;
+   background: rgba(0,0,0,.075);
+   border-radius: 50%;
+   transform: scale(0);
+
+   &.animate{animation: effect 0.65s linear;}
+ }
+
+ @keyframes effect{
+ 	100%{
+     opacity: 0;
+     transform: scale(2.5);
+   }
+ }
+
+/**
+ * FOOTER
+ */
 
 .light-grey-block {
 	background-color: $light-gray;
