--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -53,6 +53,11 @@
 			}
 		}
 	}
+
+	// used for material design click
+	.circle {
+		background: $primary-color;
+	}
 }
 
 @mixin menu-controls {
@@ -513,19 +518,21 @@ small {
  * Material design click
  */
 
- .circle{
-   display: block;
-   position: absolute;
-   background: rgba(0,0,0,.075);
-   border-radius: 50%;
-   transform: scale(0);
+.circle {
+	display: block;
+	position: absolute;
+	background: rgba(0,0,0,.075);
+	border-radius: 50%;
+	transform: scale(0);
 
-   &.animate{animation: effect 0.65s linear;}
+	&.animate {
+		animation: effect 0.65s linear;
+	}
  }
 
- @keyframes effect{
- 	100%{
-     opacity: 0;
+ @keyframes effect {
+ 	100% {
+    //  opacity: 0;
      transform: scale(2.5);
    }
  }
